--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
   "dotenv==0.9.9",
   "bookops-worldcat==1.1.0",
   "requests==2.32.3",
-  "openpyxl==3.1.5"
+  "openpyxl==3.1.5",
+  "owlrl==7.1.3"
 ]
 
 [project.urls]
