--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
   "bookops-worldcat==1.1.0",
   "requests==2.32.3",
   "openpyxl==3.1.5",
-  "owlrl==7.1.3"
+  "owlrl==7.1.3",
+  "reasonable==0.2.6"
 ]
 
 [project.urls]
